--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.squareup.wire</groupId>
+      <artifactId>wire-runtime</artifactId>
+      <version>3.4.0</version>
+    </dependency>
   </dependencies>
 
   <distributionManagement>
